--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "VHHS DRIVERS",
+    "name": "D128Driving",
     "slug": "react",
     "privacy": "public",
     "sdkVersion": "36.0.0",
@@ -27,6 +27,6 @@
       "bundleIdentifier": "host.george.drivers",
       "supportsTablet": true
     },
-    "description": "A drivers hours log for VHHS with firebase backend"
+    "description": "A drivers hours log for D128 with firebase backend"
   }
 }
