--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "base-64": "^0.1.0",
     "expo": "~36.0.0",
     "expo-app-auth": "~8.0.0",
+    "expo-av": "^8.4.0",
     "expo-google-app-auth": "^8.1.0",
     "expo-google-sign-in": "~8.0.0",
+    "expo-mail-composer": "~8.0.0",
+    "expo-print": "~8.0.0",
     "firebase": "^7.14.0",
     "google-sign-in": "^3.0.3",
     "react": "~16.9.0",
@@ -35,9 +38,7 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.3.1",
-    "expo-print": "~8.0.0",
-    "expo-mail-composer": "~8.0.0"
+    "react-navigation": "^4.3.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
