--- a/app.json
+++ b/app.json
@@ -11,9 +11,9 @@
     ],
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/D128FullC.png",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/D128FullC.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
