--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.3.1"
+    "react-navigation": "^4.3.1",
+    "@react-native-community/datetimepicker": "2.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
