--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.8.1",
+    "@react-native-community/datetimepicker": "2.1.0",
     "@react-native-community/google-signin": "^4.0.0",
     "@react-native-community/masked-view": "0.1.5",
     "@react-native-firebase/app": "^6.3.4",
@@ -23,6 +24,7 @@
     "expo-google-app-auth": "^8.1.0",
     "expo-google-sign-in": "~8.0.0",
     "expo-mail-composer": "~8.0.0",
+    "expo-optimize": "^0.1.47",
     "expo-print": "~8.0.0",
     "firebase": "^7.14.0",
     "google-sign-in": "^3.0.3",
@@ -38,8 +40,7 @@
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
-    "react-navigation": "^4.3.1",
-    "@react-native-community/datetimepicker": "2.1.0"
+    "react-navigation": "^4.3.1"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
